made divs text editable, fixed some css spacing

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -34,7 +34,7 @@ textarea{
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;;
-  padding-bottom: 5%;
+  padding-bottom: 15%;
   padding-left: 2%;
 
 }
